Removed node_modules and added .gitignore

--- a/about.html
+++ b/about.html
@@ -90,12 +90,17 @@ footer {
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="vehicles.html">Vehicles</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+      <a href="my-inquiries.html">My Inquiries</a>
+      <a href="orders.html">My Orders</a>
+      <a href="admin.html">Admin</a>
     </nav>
 
     <section class="about-section">
+        <script src="scripts/auth.js"></script>
         <div class="about-text">
             <h2>About Us</h2>
             <p>Welcome to Drive Hub Motors – your trusted destination for quality vehicles. We specialize in selling a wide range of new and pre-owned cars from top brands like Toyota, BMW, Honda, and Yamaha.</p>
@@ -116,4 +121,3 @@ footer {
     </footer>
 </body>
 </html>
-
