--- a/vehicles.html
+++ b/vehicles.html
@@ -6,15 +6,18 @@
     <title>Our Vehicles - Drive Hub Motors</title>
     <link rel="stylesheet" href="styles/vehicle.css" />
     <script src="scripts/vehicle.js"></script>
-   
-   
+    <script src="scripts/auth.js"></script>
   </head>
   <body>
     <div class="header">
       <nav>
         <a href="index.html">Home</a>
+        <a href="vehicles.html">Vehicles</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
+        <a href="my-inquiries.html">My Inquiries</a>
+        <a href="orders.html">My Orders</a>
+        <a href="admin.html">Admin</a>
       </nav>
 
       <header class="page-header">
@@ -160,7 +163,6 @@
           <p class="price">Starting at $22,000</p>
          <a href="#" class="inquiry-btn" onclick="saveInquiry(event, 'Compact Sedan', 'carImages/car9.png.jpg', '$22,000')">Inquire Now</a>
         </div>
-        </div>
       </div>
       <div class="car-card">
         <img src="carImages/car10.png.jpg" alt="Luxury SUV" />
@@ -190,7 +192,6 @@
           </ul>
           <p class="price">Starting at $55,000</p>
          <a href="#" class="inquiry-btn" onclick="saveInquiry(event, 'Electric SUV', 'carImages/car11.png.jpg', '$55,000')">Inquire Now</a>
-        </div>
         </div>
       </div>
       <div class="car-card">
